# finn_scraper

./: .gitignore  finn_scrape.py  pyproject.toml
